fix - fixing the design issue of navbar covering whole top area

--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@
 
 body{
   font-family: 'Poppins', sans-serif;
-
+  margin:0;
+  padding:0;
 }
